--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -178,3 +178,39 @@ h3, h4, h5{
   }
 
 }
+
+
+
+
+/*BOTON WHA*/
+
+
+.whatsapp-button {
+  position: fixed; /* Hace que el botón sea fijo en la pantalla */
+  bottom: 20px; /* Distancia desde la parte inferior */
+  right: 20px; /* Distancia desde el borde derecho */
+  z-index: 1000; /* Asegura que esté por encima de otros elementos */
+}
+
+.whatsapp-icon {
+  transition: transform 0.3s ease; /* Agrega una transición suave */
+  margin-left: 20px;
+}
+
+.whatsapp-icon:hover {
+  transform: scale(1.5); 
+}
+
+
+/* Boton Wha Smartphones */
+
+@media (max-width: 767px){
+
+.whatsapp-icon {
+  height: 50px;
+  width: 50px;
+}
+
+
+
+}
